2004-08-06  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Directory create dialog closes correcty on enter now.

2004-08-05  Florian Boor  <florian.boor@kernelconcepts.de>
    
	* gpe-filemanager.png: Replaced by icon that is used by gnome.

2004-07-27  Florian Boor  <florian.boor@kernelconcepts.de>
    
    Released Version 0.17.
    * main.c: Impemented limiting access to homedir.
    * main.c: Changed order of buttons in main toolbar.
    * main.c: Changed "Goto Location" button to "Go!" and use stock item.

2004-07-26  Florian Boor  <florian.boor@kernelconcepts.de>

    * Makefile: Working on V 0.17 now.
	* main.c: Added main menu.
	* main.c: We have a directory browser now.
    * main.c: Directory browser default auto-activation via display size and 
              manually via menu.

2004-07-14  Florian Boor  <florian.boor@kernelconcepts.de>

	* main.c: Open directory URI passed on command line instead 
                  of $HOME.

2004-07-05  Florian Boor  <florian.boor@kernelconcepts.de>
	* main.c: Changed calling of external software fixing #1016
	* main.c: Fixed bug causing wrong error messages.
	
2004-07-01  Florian Boor  <florian.boor@kernelconcepts.de>
	* main.c: Removed debug output.
	* main.c: Added support for application registry.
	* main.c, Makefile: Fixed several warnings and minor bugs.
	
2004-06-28  Florian Boor  <florian.boor@kernelconcepts.de>
	* main.c: add_icon() Improved displaying of ctime in list view.
	* main.c: Improved handling of SMB shares. Some minor fixes.
	* Makefile: Working on V 0.16.

2004-06-10  Florian Boor  <florian.boor@kernelconcepts.de>
	* Released V 0.15

2004-06-09  Florian Boor  <florian.boor@kernelconcepts.de>
	* main.c: Fixed selfmade bug causing history to contain bad stuff.
	* main.c: Fixed several memory leaks.
	* main.c, Makefile: Removed zoom stuff.
	* main.c: Implemented context menu and click handling in list view.

2004-06-08  Florian Boor  <florian.boor@kernelconcepts.de>